# kite_connect_rs

./: Cargo.toml
examples/: basic_auth.rs  watch_list.rs  ws.rs
src/: auto_auth.rs  error.rs  historical.rs  lib.rs  orders.rs  portfolio.rs  quotes.rs  response.rs  unimplemented.rs  utils.rs  virtual_contract_note.rs  ws.rs
src/user/: funds.rs  mod.rs  profile.rs  session_token.rs
