[package]
name = "kite_connect"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
publish.workspace = true

[features]
auto_auth = ["dep:tokio"]

[dependencies]
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, optional = true, features = ["net"] }

sha2 = "0.10"
hex = "0.4"

[[example]]
name = "basic_auth"
required-features = ["auto_auth", "tokio/rt", "tokio/macros"]
