[package]
name = "kite_connect"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
publish.workspace = true

[features]
auto_auth = ["tokio/net"]

[dependencies]
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
crossbeam-channel = { workspace = true }

sha2 = "0.10"
serde_urlencoded = "0.7"
csv = "1.3"
tokio-tungstenite={ version = "0.27", features=["native-tls"] }
futures-util = "0.3"
byteorder = "1.5"

[[example]]
name = "basic_auth"
required-features = ["auto_auth", "tokio/rt", "tokio/macros"]

[[example]]
name = "ws"
required-features = ["auto_auth", "tokio/rt-multi-thread", "tokio/macros"]
