[package]
name = "kite_connect"
description = "A Rust client for communicating with the Kite Connect API"
version = "0.1.0"
edition = "2024"
authors = ["Aditya Kumar <git@adityais.dev>"]
license = "MIT"
keywords = ["api-bindings", "web-programming::http-client"]
repository = "https://github.com/as1100k/kite_connect_rs"

[features]
auto_auth = ["tokio/net"]

[dependencies]
reqwest = { version = "0.13", features = ["json", "query", "form"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1.46"
crossbeam-channel = "0.5"
csv = "1.3"

sha2 = "0.10"
serde_urlencoded = "0.7"
tokio-tungstenite={ version = "0.28", features=["native-tls"] }
futures-util = "0.3"
byteorder = "1.5"

[dev-dependencies]
ratatui = "0.30"

[package.metadata.docs.rs]
all-features = true
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[[example]]
name = "basic_auth"
required-features = ["auto_auth", "tokio/rt", "tokio/macros"]
doc-scrape-examples = true

[[example]]
name = "ws"
required-features = ["auto_auth", "tokio/rt-multi-thread", "tokio/macros"]
doc-scrape-examples = true

[[example]]
name = "watch_list"
required-features = ["auto_auth", "tokio/rt-multi-thread", "tokio/macros"]
doc-scrape-examples = true
